force-app/main/default/objects/Case/fields/Am_I_the_case_contact__c.field-meta.xml
<CustomField>
    <fullName>Am_I_the_case_contact__c</fullName>
    <formula>IF(ISBLANK(Contact.Email), $User.Email = SuppliedEmail , $User.Email = Contact.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks to see if logged in user&apos;s email address matches case contact email address, if case contact is blank, checks Web Email address</inlineHelpText>
    <label>Am I the case contact?</label>
    <type>Checkbox</type>
</CustomField>