force-app/main/default/objects/Case/fields/Assignee_If_Different__c.field-meta.xml
<CustomField>
    <fullName>Assignee_If_Different__c</fullName>
    <label>Assignee If Different</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aly Garvin</fullName>
            </value>
            <value>
                <fullName>Alex Schulte</fullName>
            </value>
            <value>
                <fullName>Reg Schonborn</fullName>
            </value>
            <value>
                <fullName>Olivia Love</fullName>
            </value>
            <value>
                <fullName>Trevor Lennox</fullName>
            </value>
            <value>
                <fullName>Kamal</fullName>
            </value>
            <value>
                <fullName>BWOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>