force-app/main/default/objects/Case/fields/Case_Detail__c.field-meta.xml
<CustomField>
    <fullName>Case_Detail__c</fullName>
    <label>Case Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>