force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Customer</fullName>
                
                
                    <label>Customer</label>
                
                </value>
            
                <value>
                
                    <fullName>3rd Party</fullName>
                
                
                    <label>3rd Party</label>
                
                </value>
            
                <value>
                
                    <fullName>Vendor</fullName>
                
                
                    <label>Vendor</label>
                
                </value>
            
                <value>
                
                    <fullName>Perch</fullName>
                
                
                    <label>Perch</label>
                
                </value>
            
                <value>
                
                    <fullName>BlueWave</fullName>
                
                
                    <isActive>false</isActive>
                
                    <label>BlueWave</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>