force-app/main/default/objects/Case/fields/Case_Update__c.field-meta.xml
<CustomField>
    <fullName>Case_Update__c</fullName>
    <description>Formerly Case Update (API Name is still Case_Update).  Please use chatter for case-specific updates.</description>
    <inlineHelpText>Formerly Case Update (API Name is still Case_Update).  Please use chatter for case-specific updates.</inlineHelpText>
    <label>Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>