force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Select all options that best describe what the customer case was about.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Line__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>TPF/Collections</fullName>
            </value>
            <value>
                <fullName>SREC</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
                <label>Billing-Issue</label>
            </value>
            <value>
                <fullName>Subscription Change</fullName>
                <label>Subscription Transfer</label>
            </value>
            <value>
                <fullName>Technical Assistance</fullName>
            </value>
            <value>
                <fullName>Product Question</fullName>
            </value>
            <value>
                <fullName>Subscription Adjustment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SRECs</fullName>
            </value>
            <value>
                <fullName>Application Status</fullName>
            </value>
            <value>
                <fullName>Disbursals</fullName>
            </value>
            <value>
                <fullName>Loan Terms</fullName>
            </value>
            <value>
                <fullName>Amortization Table</fullName>
            </value>
            <value>
                <fullName>Portal Issue</fullName>
                <label>Portal Support</label>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Poor Review</fullName>
            </value>
            <value>
                <fullName>Credit Allocation Issue</fullName>
            </value>
            <value>
                <fullName>Cancelled Utility Account</fullName>
            </value>
            <value>
                <fullName>Final Bill</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>Do not send bill</fullName>
            </value>
            <value>
                <fullName>Bill % Incorrect: Rounding error</fullName>
            </value>
            <value>
                <fullName>Bill % Incorrect: Unknown error</fullName>
            </value>
            <value>
                <fullName>UAS Marked as Cancelled: On Transfer Sheet</fullName>
            </value>
            <value>
                <fullName>UAS Marked as Cancelled: Not on Transfer Sheet</fullName>
            </value>
            <value>
                <fullName>Custom Message Update</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Product Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>