force-app/main/default/objects/Case/fields/Complaint_Description__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Description__c</fullName>
    <description>Detailed description of complaint; includes additional categories (beyond primary category) if appropriate</description>
    <inlineHelpText>Enter detailed description of complaint; include additional categories (beyond primary category) if appropriate</inlineHelpText>
    <label>Complaint Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>