force-app/main/default/objects/Case/fields/Created_From_Task__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Task__c</fullName>
    <label>Created From Call Log</label>
    <length>30</length>
    <type>Text</type>
</CustomField>