force-app/main/default/objects/Case/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <description>Due date for case - set by process builder for CS and RL follow up cases</description>
    <inlineHelpText>Due date for case - set by process builder for CS and RL follow up cases</inlineHelpText>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>