force-app/main/default/objects/Case/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>This is the field populated by customer users through portals and online webforms. It is visible to them, so it should not be edited by Bluewave employees.</description>
    <label>Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>