force-app/main/default/objects/Case/fields/Disable_Followup_Email__c.field-meta.xml
<CustomField>
    <fullName>Disable_Followup_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will stop the automated email that goes out when a customer care or partner support case is closed that contains the survey.</description>
    <inlineHelpText>Checking this box will stop the automated email that goes out when a customer care or partner support case is closed that contains the survey.</inlineHelpText>
    <label>Disable Followup Email</label>
    <type>Checkbox</type>
</CustomField>