force-app/main/default/objects/Case/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Error Log</label>
    <referenceTo>Error_Log__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>