force-app/main/default/objects/Case/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>External id that can be used for upserts</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>