force-app/main/default/objects/Case/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <inlineHelpText>Date of next follow up/touch point with customer</inlineHelpText>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>