force-app/main/default/objects/Case/fields/How_Can_We_Help__c.field-meta.xml
<CustomField>
    <fullName>How_Can_We_Help__c</fullName>
    <label>How Can We Help?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>