force-app/main/default/objects/Case/fields/Link_to_Case__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Case__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id ,  Subject)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Subject</label>
    <type>Text</type>
</CustomField>