force-app/main/default/objects/Case/fields/of_Letters__c.field-meta.xml
<CustomField>
    <fullName>of_Letters__c</fullName>
    <label># of Letters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>