force-app/main/default/objects/Case/fields/of_SMS__c.field-meta.xml
<CustomField>
    <fullName>of_SMS__c</fullName>
    <label># of SMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>