force-app/main/default/objects/Case/fields/Permission_Set_Expiration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Expiration_Date_Time__c</fullName>
    <description>Date/Time that the provisioned permission set will expire.</description>
    <label>Permission Set Expiration Date/Time</label>
    <type>DateTime</type>
</CustomField>