force-app/main/default/objects/Case/fields/Permission_Set_ID__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_ID__c</fullName>
    <description>ID of the permission set that is being requested via the permission requestor flow</description>
    <label>Permission Set ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>