force-app/main/default/objects/Case/fields/Primary_Complaint_Category__c.field-meta.xml
<CustomField>
    <fullName>Primary_Complaint_Category__c</fullName>
    <description>Primary category of issue or complaint</description>
    <inlineHelpText>Select the primary issue or complaint category</inlineHelpText>
    <label>Primary Complaint Category</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Advertising/marketing</fullName>
                
                
                    <label>Advertising/marketing</label>
                
                </value>
            
                <value>
                
                    <fullName>Application</fullName>
                
                
                    <label>Application</label>
                
                </value>
            
                <value>
                
                    <fullName>Customer Service</fullName>
                
                
                    <label>Customer Service</label>
                
                </value>
            
                <value>
                
                    <fullName>Discrimination</fullName>
                
                
                    <label>Discrimination</label>
                
                </value>
            
                <value>
                
                    <fullName>Fraud</fullName>
                
                
                    <label>Fraud</label>
                
                </value>
            
                <value>
                
                    <fullName>Identity Theft</fullName>
                
                
                    <label>Identity Theft</label>
                
                </value>
            
                <value>
                
                    <fullName>Improper Sales Practices</fullName>
                
                
                    <label>Improper Sales Practices</label>
                
                </value>
            
                <value>
                
                    <fullName>Installer/Partner</fullName>
                
                
                    <label>Installer/Partner</label>
                
                </value>
            
                <value>
                
                    <fullName>Miscellaneous</fullName>
                
                
                    <label>Miscellaneous</label>
                
                </value>
            
                <value>
                
                    <fullName>Origination/Credit Decision</fullName>
                
                
                    <label>Origination/Credit Decision</label>
                
                </value>
            
                <value>
                
                    <fullName>Payments</fullName>
                
                
                    <label>Payments</label>
                
                </value>
            
                <value>
                
                    <fullName>Privacy</fullName>
                
                
                    <label>Privacy</label>
                
                </value>
            
                <value>
                
                    <fullName>Servicemember/SCRA</fullName>
                
                
                    <label>Servicemember/SCRA</label>
                
                </value>
            
                <value>
                
                    <fullName>Service Provider</fullName>
                
                
                    <label>Service Provider</label>
                
                </value>
            
                <value>
                
                    <fullName>Servicing/Collection</fullName>
                
                
                    <label>Servicing/Collection</label>
                
                </value>
            
                <value>
                
                    <fullName>Unauthorized Enrollment</fullName>
                
                
                    <label>Unauthorized Enrollment</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>