force-app/main/default/objects/Case/fields/Product_tag__c.field-meta.xml
<CustomField>
    <fullName>Product_tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Product the support case is related to</inlineHelpText>
    <label>Product Tag</label>
    <referenceTo>agf__ADM_Product_Tag__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>