force-app/main/default/objects/Case/fields/Production_Update__c.field-meta.xml
<CustomField>
    <fullName>Production_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Update</label>
    <referenceTo>Energy_Usage_Update__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>