force-app/main/default/objects/Case/fields/QC_Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>QC_Case_Subject__c</fullName>
    <description>Used in QC Case Creation Flow</description>
    <label>QC Case Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>File Not Scored Due to Insufficient Credit</fullName>
            </value>
            <value>
                <fullName>Low Credit Match - New Guarantor Needs to Apply</fullName>
            </value>
            <value>
                <fullName>No Credit Match - Provide Additional Background on Guarantor (New Address or DOB)</fullName>
            </value>
            <value>
                <fullName>Not Enough Usage to be Subscribed</fullName>
            </value>
            <value>
                <fullName>Provide Information on Net Metering Credits</fullName>
            </value>
            <value>
                <fullName>Provide New Utility Account Number for EDI Utility Data</fullName>
            </value>
            <value>
                <fullName>Provide Payment Information - Notify Customer to Call BlueWave Support</fullName>
            </value>
            <value>
                <fullName>Signature Needed on Updated Customer Contract at Link Provided - Typos Corrected</fullName>
            </value>
            <value>
                <fullName>Subscription adjustment needed</fullName>
            </value>
            <value>
                <fullName>Upload Complete Utility Bill to Case - Bill Within last 90 Days Needed</fullName>
            </value>
            <value>
                <fullName>Upload Complete Utility Bill to Case - Customer Disabled EDI Data</fullName>
            </value>
            <value>
                <fullName>Upload Complete Utility Bill to Case - Need 3 Months of Bills</fullName>
            </value>
            <value>
                <fullName>Upload Complete Utility Bill to Case - Need Bill without Overdue Payments</fullName>
            </value>
            <value>
                <fullName>Upload Complete Utility Bill to Case - Need More Pages</fullName>
            </value>
            <value>
                <fullName>Utility Account is Already Subscribed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>