force-app/main/default/objects/Case/fields/Recurring_Billing__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing__c</fullName>
    <formula>Account.Recurring_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Billing?</label>
    <type>Checkbox</type>
</CustomField>