force-app/main/default/objects/Case/fields/Related_Utility_Account_Log__c.field-meta.xml
<CustomField>
    <fullName>Related_Utility_Account_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Utility Account Log</label>
    <referenceTo>Utility_Account_Log__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>