force-app/main/default/objects/Case/fields/Replied_Email_Count__c.field-meta.xml
<CustomField>
    <fullName>Replied_Email_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created by OpFocus</description>
    <label>Replied Email Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>