force-app/main/default/objects/Case/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <inlineHelpText>What is the resolution to this case?</inlineHelpText>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Data Update</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Modify Access</fullName>
            </value>
            <value>
                <fullName>No Longer an Issue</fullName>
            </value>
            <value>
                <fullName>No Longer Past Due</fullName>
            </value>
            <value>
                <fullName>Not a support case</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Resolved by external team</fullName>
            </value>
            <value>
                <fullName>Resolved with KB article</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
            <value>
                <fullName>Enhanced Code</fullName>
                <isActive>false</isActive>
                <label>Enhanced Code</label>
            </value>
            <value>
                <fullName>Enhanced Config</fullName>
                <isActive>false</isActive>
                <label>Enhanced Config</label>
            </value>
            <value>
                <fullName>Fix Code</fullName>
                <isActive>false</isActive>
                <label>Fix Code</label>
            </value>
            <value>
                <fullName>Fix Config</fullName>
                <isActive>false</isActive>
                <label>Fix Config</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>