force-app/main/default/objects/Case/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>Long text description of what caused the issue</description>
    <inlineHelpText>What caused the issue?</inlineHelpText>
    <label>Root Cause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>