force-app/main/default/objects/Case/fields/Round_Robin_Queue__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Queue__c</fullName>
    <label>Round Robin Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>