force-app/main/default/objects/Case/fields/Round_Robin_Queue_Position__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Queue_Position__c</fullName>
    <label>Round Robin Queue Position</label>
    <length>5</length>
    <type>Text</type>
</CustomField>