force-app/main/default/objects/Case/fields/Sale_Status__c.field-meta.xml
<CustomField>
    <fullName>Sale_Status__c</fullName>
    <description>Allows support to track cases that stem from pre and post sale</description>
    <inlineHelpText>Did the issue arise before or after the sale?</inlineHelpText>
    <label>Sale Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <controllingField>Product_Line__c</controllingField>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Pre-sale</fullName>
                
                
                    <label>Pre-sale</label>
                
                </value>
            
                <value>
                
                    <fullName>Post-sale</fullName>
                
                
                    <label>Post-sale</label>
                
                </value>
            
            </valueSetDefinition>
        
        
        
        </valueSet>
</CustomField>