force-app/main/default/objects/Case/fields/Shared_with_Client__c.field-meta.xml
<CustomField>
    <fullName>Shared_with_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is automatically checked when a case is shared with a Client</inlineHelpText>
    <label>Shared with Client</label>
    <type>Checkbox</type>
</CustomField>