force-app/main/default/objects/Case/fields/Skip_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Skip_Round_Robin__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if round robin is used when assigning this case</inlineHelpText>
    <label>Skip Round Robin</label>
    <type>Checkbox</type>
</CustomField>