force-app/main/default/objects/Case/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <description>Populated via process builder on Survey Invitation object</description>
    <inlineHelpText>CSAT Survey link related to this case</inlineHelpText>
    <label>Survey URL</label>
    <type>Url</type>
</CustomField>