force-app/main/default/objects/Case/fields/Time_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Close__c</fullName>
    <formula>CASE( MOD( DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 

  0 , CASE( MOD( ROUND(ClosedDate - CreatedDate,0) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( ROUND(ClosedDate - CreatedDate,0),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( ROUND(ClosedDate - CreatedDate,0),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( ROUND(ClosedDate - CreatedDate,0),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( ROUND(ClosedDate - CreatedDate,0),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( ROUND(ClosedDate - CreatedDate,0),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( ROUND(ClosedDate - CreatedDate,0) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( ROUND(ClosedDate - CreatedDate,0) )/7)*5)</formula>
    <label>Time to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>