force-app/main/default/objects/Case/fields/Transfer__c.field-meta.xml
<CustomField>
    <fullName>Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer</label>
    <referenceTo>Transfer__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>