force-app/main/default/objects/Case/fields/Utility_Follow_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Utility_Follow_Up_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utility Follow Up Required?</label>
    <type>Checkbox</type>
</CustomField>