force-app/main/default/objects/Case/fields/Zuora_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The payment method that caused this case to be created.</inlineHelpText>
    <label>Zuora Payment Method</label>
    <referenceTo>Zuora__PaymentMethod__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>